# HImprint

./: LICENSE  README.md  environment.yml  himprint.py  pyproject.toml  requirements.txt
test/: example.hap1.bed  example.hap2.bed  expected_output.bed
