[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "himprint"
version = "1.0.0"
description = "HMM-based Imprinted DMR Detection from Long-read data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "License :: OSI Approved :: PolyForm Noncommercial License 1.0.0" }
authors = [
    { name = "HImprint Authors" }
]
keywords = ["bioinformatics", "methylation", "imprinting", "long-read", "hmm", "dmr"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pomegranate==1.1.2",
    "dask==2026.1.2",
    "numpy==2.2.6",
    "pandas==2.3.3",
]

[project.scripts]
himprint = "himprint:main"

[tool.setuptools]
py-modules = ["himprint"]
